native/ffi_sec_fs/libffi_sec_fs.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package safe_disk/native/ffi_sec_fs */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 8 "exports.go"

#include <stdlib.h>
#include <stdint.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern char* sec_root_open(char* rootPath, char* password, char* configJSON);
extern char* sec_root_close(int64_t rootID);
extern char* sec_file_open(int64_t rootID, char* path, int mode);
extern char* sec_file_close(int64_t fileID);
extern char* sec_file_read(int64_t fileID, int size);
extern char* sec_file_write(int64_t fileID, char* data, int size);
extern char* sec_file_seek(int64_t fileID, int64_t offset, int whence);
extern char* sec_file_truncate(int64_t fileID, int64_t size);
extern char* sec_file_delete(int64_t rootID, char* path);
extern char* sec_file_exists(int64_t rootID, char* path);
extern char* sec_mkdir_all(int64_t rootID, char* path);
extern char* sec_read_dir(int64_t rootID, char* path);
extern char* sec_quick_read_file(int64_t rootID, char* path);
extern char* sec_quick_write_file(int64_t rootID, char* path, char* data, int size);
extern void sec_free_string(char* s);
extern char* sec_export_directory_async(int64_t rootID, char* srcPath, char* destPath);
extern char* sec_import_directory_async(int64_t rootID, char* srcPath, char* destPath);
extern char* sec_export_file_async(int64_t rootID, char* srcPath, char* destPath);
extern char* sec_import_file_async(int64_t rootID, char* srcPath, char* destPath);

#ifdef __cplusplus
}
#endif